[gd_scene load_steps=4 format=3 uid="uid://cbdn0xqj7u7tv"]

[ext_resource type="FontFile" uid="uid://da2t6lyf41wty" path="res://assets/fonts/open-sans/open-sans-bold.ttf" id="1_font"]
[ext_resource type="Script" path="res://scenes/menu/stage_select.gd" id="2_script"]

[node name="StageSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.16, 0.26, 0.3, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_right = -8.0
offset_bottom = -339.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MarginContainer/Control/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 52
text = "ステージ選択"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -30.0
offset_right = 180.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="StageScroll" type="ScrollContainer" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(360, 260)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 1

[node name="StageList" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/StageScroll"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 56)
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
